force-app/main/default/objects/Project__c/fields/Actual_Complete__c.field-meta.xml
<CustomField>
    <fullName>Actual_Complete__c</fullName>
    <label>Actual % Complete</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>