force-app/main/default/objects/Project__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <label>Additional Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>