force-app/main/default/objects/Project__c/fields/Baseline_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Duration_Days__c</fullName>
    <formula>Baseline_End_Date__c - Baseline_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baseline Duration (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>