force-app/main/default/objects/Project__c/fields/Baseline_Effort_Hours__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Effort_Hours__c</fullName>
    <description>Approved effort baseline hours.</description>
    <label>Baseline Effort (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>