force-app/main/default/objects/Project__c/fields/Baseline_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Baseline_End_Date__c</fullName>
    <label>Baseline End Date</label>
    <type>Date</type>
</CustomField>