force-app/main/default/objects/Project__c/fields/Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Method__c</fullName>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Based on Project Hours</fullName>
            </value>
            <value>
                <fullName>Staff Hours</fullName>
            </value>
            <value>
                <fullName>Task/Issue Hours</fullName>
            </value>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>