force-app/main/default/objects/Project__c/fields/Budget_Balance__c.field-meta.xml
<CustomField>
    <fullName>Budget_Balance__c</fullName>
    <formula>Planned_Cost__c  -  Actual_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>