force-app/main/default/objects/Project__c/fields/Budget_Creep__c.field-meta.xml
<CustomField>
    <fullName>Budget_Creep__c</fullName>
    <formula>(Forecasted_Cost_EAC__c - Cost_Budget__c)/ Cost_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Creep %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>