force-app/main/default/objects/Project__c/fields/Budget_Health__c.field-meta.xml
<CustomField>
    <fullName>Budget_Health__c</fullName>
    <label>Budget Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Overrun</fullName>
            </value>
            <value>
                <fullName>Surplus</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>