force-app/main/default/objects/Project__c/fields/Budget_Health_Indication__c.field-meta.xml
<CustomField>
    <fullName>Budget_Health_Indication__c</fullName>
    <formula>IF(
    Budget_Creep__c &lt;= 0.05, &quot;🟢 Green&quot;,
    IF(
        Budget_Creep__c &lt;= 0.10, &quot;🟠 Amber&quot;,
        &quot;🔴 Red&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Health Indication</label>
    <type>Text</type>
</CustomField>