force-app/main/default/objects/Project__c/fields/Budget_Type__c.field-meta.xml
<CustomField>
    <fullName>Budget_Type__c</fullName>
    <label>Budget Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Based On Project</fullName>
            </value>
            <value>
                <fullName>Based On Milestone</fullName>
            </value>
            <value>
                <fullName>Based On Task</fullName>
            </value>
            <value>
                <fullName>Based On User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>