force-app/main/default/objects/Project__c/fields/Cost_Variance_CV__c.field-meta.xml
<CustomField>
    <fullName>Cost_Variance_CV__c</fullName>
    <formula>Earned_Value_EV__c - Actual_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Variance (CV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>