force-app/main/default/objects/Project__c/fields/CPI__c.field-meta.xml
<CustomField>
    <fullName>CPI__c</fullName>
    <formula>Earned_Value_EV__c/ Actual_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>