force-app/main/default/objects/Project__c/fields/EAC__c.field-meta.xml
<CustomField>
    <fullName>EAC__c</fullName>
    <formula>Cost_Budget__c / CPI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EAC (CPI Based)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>