force-app/main/default/objects/Project__c/fields/Earned_Value_EV__c.field-meta.xml
<CustomField>
    <fullName>Earned_Value_EV__c</fullName>
    <formula>Actual_Complete__c * Planned_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earned Value (EV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>