force-app/main/default/objects/Project__c/fields/Forecast_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecast_End_Date__c</fullName>
    <label>Forecast End Date</label>
    <type>Date</type>
</CustomField>