force-app/main/default/objects/Project__c/fields/Forecasted_Cost_EAC__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Cost_EAC__c</fullName>
    <formula>Actual_Cost__c + Remaining_Planned_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecasted Cost (EAC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>