force-app/main/default/objects/Project__c/fields/Non_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Non_Billable_Hours__c</fullName>
    <label>Non Billable Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>