force-app/main/default/objects/Project__c/fields/Planned_Value_PV__c.field-meta.xml
<CustomField>
    <fullName>Planned_Value_PV__c</fullName>
    <formula>Planned_Complete__c * Planned_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Value (PV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>