force-app/main/default/objects/Project__c/fields/Remaining_Planned_Cost__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Planned_Cost__c</fullName>
    <formula>Planned_Cost__c - Actual_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Planned Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>