force-app/main/default/objects/Project__c/fields/Retesting_Fixed_Count__c.field-meta.xml
<CustomField>
    <fullName>Retesting_Fixed_Count__c</fullName>
    <label>Retesting Fixed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>