force-app/main/default/objects/Project__c/fields/Schedule_Creep__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Creep__c</fullName>
    <formula>(Forecast_End_Date__c - Baseline_End_Date__c )/ Baseline_Duration_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Creep %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>