force-app/main/default/objects/Project__c/fields/Schedule_Health__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Health__c</fullName>
    <formula>IF(
    Schedule_Creep__c &lt;= 0.05, &quot;🟢 Green&quot;,
    IF(
        Schedule_Creep__c &lt;= 0.15, &quot;🟠 Amber&quot;,
        &quot;🔴 Red&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Health</label>
    <type>Text</type>
</CustomField>