force-app/main/default/objects/Project__c/fields/Schedule_Variance__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Variance__c</fullName>
    <formula>Earned_Value_EV__c - Planned_Value_PV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Variance (SV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>