force-app/main/default/objects/Project__c/fields/Scope_Creep__c.field-meta.xml
<CustomField>
    <fullName>Scope_Creep__c</fullName>
    <formula>Unapproved_Extra_Effort__c / Baseline_Effort_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scope Creep %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>