force-app/main/default/objects/Project__c/fields/Scope_Health__c.field-meta.xml
<CustomField>
    <fullName>Scope_Health__c</fullName>
    <formula>IF(
    Scope_Creep__c &lt;= 0.05, &quot;🟢 Green&quot;,
    IF(
        Scope_Creep__c &lt;= 0.10, &quot;🟠 Amber&quot;,
        &quot;🔴 Red&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scope Health</label>
    <type>Text</type>
</CustomField>