force-app/main/default/objects/Project__c/fields/SPI__c.field-meta.xml
<CustomField>
    <fullName>SPI__c</fullName>
    <formula>Earned_Value_EV__c / Planned_Value_PV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>