force-app/main/default/objects/Project__c/fields/Stage_Order__c.field-meta.xml
<CustomField>
    <fullName>Stage_Order__c</fullName>
    <formula>CASE(Status__c,
&quot;Pre Kick off&quot;, 1,
&quot;Kick off&quot;, 2,
&quot;BRG&quot;, 3,
&quot;Sign-off&quot;, 4,
&quot;Development&quot;, 5,
&quot;UAT&quot;, 6,
&quot;Go-Live&quot;, 7,
&quot;Hypercare Support&quot;, 8,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>