force-app/main/default/objects/Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Kick off</fullName>
            </value>
            <value>
                <fullName>Kick off</fullName>
            </value>
            <value>
                <fullName>BRG</fullName>
            </value>
            <value>
                <fullName>Sign-off</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Go-Live</fullName>
            </value>
            <value>
                <fullName>Hypercare Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>