force-app/main/default/objects/Project__c/fields/Unapproved_Extra_Effort__c.field-meta.xml
<CustomField>
    <fullName>Unapproved_Extra_Effort__c</fullName>
    <label>Unapproved Extra Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>