force-app/main/default/objects/Project__c/validationRules/Prevent_Back_AND_Skip.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Back_AND_Skip</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(Status__c),
Stage_Order__c &lt;&gt; PRIORVALUE(Stage_Order__c) + 1
)</errorConditionFormula>
    <errorMessage>You cannot move the Project back to a previous status and Skip also.</errorMessage>
</ValidationRule>