force-app/main/default/objects/Project__c/validationRules/Restrict_Start_and_End_date_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Start_and_End_date_change</fullName>
    <active>true</active>
    <description>Start Date and End date cannot be changed once entered.</description>
    <errorConditionFormula>OR(
    AND(
        ISCHANGED(Start_Date__c),
        NOT(ISBLANK(PRIORVALUE(Start_Date__c)))
    ),
    AND(
        ISCHANGED(End_Date__c),
        NOT(ISBLANK(PRIORVALUE(End_Date__c)))
    )
)</errorConditionFormula>
    <errorMessage>Start Date and End Date cannot be changed once set.</errorMessage>
</ValidationRule>