force-app/main/default/objects/Project__c/listViews/Current_Projects.listView-meta.xml
<ListView>
    <fullName>Current_Projects</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Current Projects</label>
</ListView>